主要完成数据分析管理，热度管理，审核日志登记，PubMed论文数据爬虫拉取解析，完善整个项目的api文档和代码质量。 迁移PubMedID数据爬虫读取的代码，移除加载esummary，原数据字段改到efetch中解析得到，使用jsoup解析xml文件。 为数据集版本上传、数据集申请、研究成果提交的审核添加数据库日志记录。 新增分页读取研究成果。 增加数据集和研究学科点击量searchCount统计，使用redis缓存ip或者账号访问热度，每天每个账号每个资源都能增加一个热度，热度有效期为7天。热度排行榜每半小时更新，热度量每半小时增量保存到硬盘，预计热度记录每天全量持久化到本地。 优化代码质量，特别是Controller的权限控制和所有列表查询改为分页查询。 增加数据集版本的数据文件分析结果接入管理，允许数据上传者权限将文件记录提交到服务器，服务器通过本地访问分析服务得出结果并返回到前端；创建数据集版本时也会同步执行相同操作。